deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-callback-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-callback-app
  template:
    metadata:
      labels:
        app: oauth2-callback-app
    spec:
      containers:
      - name: callback-app
        image: abhishekkashyap/callback-app:latest
        imagePullPolicy: IfNotPresent
