service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-callback-service
spec:
  selector:
    app: oauth2-callback-app
  ports:
    - name: http-80
      port: 80
      targetPort: 8080
