virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-callback-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/main-gateway
  http:
  - match:
    - uri:
        exact: /abhishekk/callback
    route:
    - destination:
        host: oauth2-callback-service.default.svc.cluster.local
        port:
          number: 80
